# zelf-tiktok

./: pyproject.toml  tiktok.db
src/: main.py
src/database/: author_repository.py  base_repository.py  connection.py  create_tables.py  hashtag_repository.py  keyword_repository.py  video_repository.py
src/models/: hashtag.py  keyword.py  user.py  video.py
src/scripts/: find_influencer.py  interact.py  scrape_hashtag.py  scrape_keywords.py
src/tiktok_api/: api.py  cookies.json  models.py  tiktok_signature_generator.py
src/tiktok_api/js_scripts/: xbogus.js
