[tool.poetry]
name = "zelf-hackathon"
version = "0.1.0"
description = ""
authors = ["Mostofa Mohiuddin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.47.0"
pyexecjs = "^1.5.1"
requests = "^2.32.3"
httpx = "^0.27.2"
pydantic = "^2.9.2"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = "^0.31.0"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
